package org.example.parkingLotSystem.entities;

public interface Vehicle {
    String getLicencePlateNumber();
    VehicleSize getSize();
}
