package org.example.parkingLotSystem.entities;

public enum VehicleSize {
    SMALL,
    MEDIUM,
    LARGE
}
